--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,3 @@
 python-dotenv==1.0.0
-fastapi~=0.95.1
-yoyo-migrations~=8.2.0
-uvicorn[standard]
-pytest~=7.3.1
-pypika~=0.48.9
-pydantic~=1.10.7
+Django
+pytest
