--- a/lib/remote_check_sum_service/config.json
+++ b/lib/remote_check_sum_service/config.json
@@ -1,5 +1,5 @@
 {
-  "testing": false,
+  "testing": true,
   "prod_cfg": {
     "password_file": "pass.txt",
     "copied_file": "1.txt",
@@ -12,15 +12,14 @@
     "ssh_call": ["ssh"]
   },
   "test_cfg": {
-    "password_file": "pass.txt",
-    "copied_file": "1.txt",
+    "password_file": "test_files/pass.txt",
+    "copied_file": "test_files/1.txt",
     "target_host": "USER@HOST",
-    "target_location": "2.txt",
-    "md5_journal_location": "jrnl.txt",
-    "use_password": true,
+    "target_location": "test_files/2.txt",
+    "md5_journal_location": "test_files/jrnl.txt",
+    "use_password": false,
     "loop_trigger": false,
-    "rsync_call": ["python3", "scp_stub.py"],
-    "ssh_call": ["python3", "ssh_stub.py"]
+    "rsync_call": ["python3", "test_tools.py", "scp"],
+    "ssh_call": ["python3", "test_tools.py", "ssh"]
   }
 }
-
