--- a/lib/remote_check_sum_service/config.json
+++ b/lib/remote_check_sum_service/config.json
@@ -1,11 +1,11 @@
 {
   "testing": true,
   "prod_cfg": {
-    "password_file": "pass.txt",
-    "copied_file": "1.txt",
-    "target_host": "USER@HOST",
-    "target_location": "2.txt",
-    "md5_journal_location": "jrnl.txt",
+    "password_file": "",
+    "copied_file": "",
+    "target_host": "",
+    "target_location": "",
+    "md5_journal_location": "",
     "use_password": false,
     "loop_trigger": false,
     "rsync_call": ["rsync", "-r", "--delete-before"],
